[gd_scene load_steps=15 format=3 uid="uid://rkns8ggw3uyl"]

[ext_resource type="Script" path="res://scenes/menusell.gd" id="1_3171t"]
[ext_resource type="Texture2D" uid="uid://dgmiakayn242t" path="res://tilemap/plants/Corn.png" id="2_dydxy"]
[ext_resource type="Texture2D" uid="uid://taplfgu5xn8f" path="res://tilemap/plants/Tomato.png" id="3_j11hf"]
[ext_resource type="Texture2D" uid="uid://bkg15sdyevp6v" path="res://tilemap/farmingTilesheetComplete.png" id="4_yt5p4"]
[ext_resource type="Texture2D" uid="uid://d2vysm72qc5ws" path="res://tilemap/Object/MonedaD.png" id="5_hpep2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8jpxo"]
atlas = ExtResource("2_dydxy")
region = Rect2(0, 0, 14, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sxdt"]
atlas = ExtResource("3_j11hf")
region = Rect2(0, 0, 12, 13)

[sub_resource type="SpriteFrames" id="SpriteFrames_kkc67"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jpxo")
}],
"loop": true,
"name": &"corn",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sxdt")
}],
"loop": true,
"name": &"tomato",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_4x80c"]
atlas = ExtResource("4_yt5p4")
region = Rect2(176, 84, 11, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_6dg7v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4x80c")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_yahan"]
atlas = ExtResource("4_yt5p4")
region = Rect2(176, 84, 11, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_3f1vi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yahan")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_exxvr"]
atlas = ExtResource("5_hpep2")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_027hl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_exxvr")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="menusell" type="StaticBody2D"]
position = Vector2(-18, -31)
scale = Vector2(0.3, 0.3)
script = ExtResource("1_3171t")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 126.0
offset_bottom = 66.0
color = Color(0.278431, 0.243137, 0.243137, 0.184314)

[node name="icon" type="AnimatedSprite2D" parent="."]
position = Vector2(24, 22)
scale = Vector2(2.5, 2.608)
sprite_frames = SubResource("SpriteFrames_kkc67")
animation = &"corn"

[node name="Buttonleft" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 5.0
offset_top = 42.0
offset_right = 24.0
offset_bottom = 64.0

[node name="lefticon" type="AnimatedSprite2D" parent="."]
position = Vector2(16, 49)
rotation = 1.55607
scale = Vector2(2, 2.134)
sprite_frames = SubResource("SpriteFrames_6dg7v")

[node name="Buttonright" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 27.0
offset_top = 42.0
offset_right = 46.0
offset_bottom = 64.0

[node name="righticon" type="AnimatedSprite2D" parent="."]
position = Vector2(35, 57)
rotation = -1.57733
scale = Vector2(2, 2.245)
sprite_frames = SubResource("SpriteFrames_3f1vi")

[node name="pricelabel" type="RichTextLabel" parent="."]
offset_left = 56.0
offset_top = 11.0
offset_right = 96.0
offset_bottom = 35.0
text = "5
"

[node name="coinicon" type="AnimatedSprite2D" parent="."]
position = Vector2(107, 22)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_027hl")

[node name="SellButtoncolor" type="ColorRect" parent="."]
offset_left = 56.0
offset_top = 41.0
offset_right = 116.0
offset_bottom = 60.0
color = Color(0.827451, 0.101961, 0.101961, 0.368627)

[node name="SellButton" type="Button" parent="."]
offset_left = 56.0
offset_top = 41.0
offset_right = 156.0
offset_bottom = 72.0
scale = Vector2(0.6, 0.6)
text = "Sell"

[connection signal="pressed" from="Buttonleft" to="." method="_on_buttonleft_pressed"]
[connection signal="pressed" from="Buttonright" to="." method="_on_buttonright_pressed"]
[connection signal="pressed" from="SellButton" to="." method="_on_sell_button_pressed"]
